# medium-blog-snowflakeray

./: MANIFEST.in  README-EC2.md  README.md  setup.cfg  setup.py
src/snowflakeray/: cluster_init.py  test.sql
src/snowflakeray.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/snowflakeray/deploy_client/image_builds/: base_image_builder.py  client_image_builder.py  docker_context.py
src/snowflakeray/deploy_client/image_registry/: credential.py  http_client.py  imagelib.py  registry_client.py
src/snowflakeray/deploy_client/snowservice/: deploy.py  deploy_options.py  file_utils.py
src/snowflakeray/deploy_client/utils/: cluster_init_helper.py  constants.py  file_utils.py  query_result_checker.py  session_token_manager.py  snowservice_client.py  uri.py
src/snowflakeray/docker_context_dir/ray_base/: Dockerfile  entrypoint.sh  ray_requirements.txt  usecase_requirements.txt
src/snowflakeray/docker_context_dir/ray_head/: Dockerfile
use cases/: setup-ray-prerequisites.sql
use cases/imageprocessing/: setup-ray-for-image-classification.ipynb
use cases/imageprocessing/notebooks/: Pytorch image classification.ipynb
use cases/llmserving/: creds.json  setup-ray-for-llmserving-nopoolnames.ipynb  setup-ray-for-llmserving.ipynb  setup-ray-for-llmserving.py
use cases/llmserving/notebooks/: Ray Serve Deployment.ipynb  test_local_vllm_chat.ipynb
use cases/model_training/: setup-ray-for-distributed-xgboost.ipynb
use cases/model_training/notebooks/: Distributed XGBoost with Ray and Snowflake Demo.ipynb  Standard XGBoost HPO with Ray.ipynb
(+8 files in other folders)
