[metadata]
name = snowflakeray
version = 1.0.0
author = Puneet Lakhanpal
author_email = puneet.lakhanpal@snowflake.com
description = Sets up Distributed Ray on SPCS
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src